💄alignment fix

--- a/src/sass/global/_layout.scss
+++ b/src/sass/global/_layout.scss
@@ -33,7 +33,7 @@
     &__category {
         grid-column: 1 / 2;
         grid-row: 2;
-        align-self: start;
+        align-self: end;
     }
 
     &__tags {
